--- a/src/main/resources/templates/product-listing.html
+++ b/src/main/resources/templates/product-listing.html
@@ -1,41 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Level Up Lunch - Contact Listing</title>
+<meta charset="utf-8">
+<title>Grid/List View Switcher Demo - Vandelay Design Blog</title>
+<meta name="author" content="Jake Rocheleau">
+<link rel="shortcut icon" href="http://vandelaydesign.com/favicon.ico">
+<link rel="icon" href="http://vandelaydesign.com/favicon.ico">
+<link rel="stylesheet" type="text/css" href="listingProductsStyle.css">
+<script type="text/javascript"
+	src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+</head>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"></head>
 <body>
+	<div id="wrap">
+		<header>
+			<span class="list-style-buttons"> <a href="#" id="gridview"
+				class="switcher"><img src="images/grid-view.png" alt="Grid"></a>
+				<a href="#" id="listview" class="switcher active"><img
+					src="images/list-view-active.png" alt="List"></a>
+			</span>
+			<h1>Our Products</h1>
 
-    <h2>Contact Listing</h2>
+		</header>
 
-    <table class="data-contacts-js table table-striped" >
-        <tr>
-            <th>Name</th>
-            <th>Telephone</th>
-            <th>Email</th>
-        </th>
-    </table>
+		<ul id="products" class="list clearfix">
+          <script type="text/javascript" src="listingProducts.js"> 
+			<script	src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+			<script type="text/javascript">
+		$(document).ready(
+				  function() {
+					$.get("http://localhost:8080/ajaxproducts", function(data) {
+					
+						$.each(data, function(i, product) {
+							$("#products").append(
+									
+					"<li class='clearfix'>"+
+						"<section class='left'>"+
+							"<img src='images/products/list-default-thumb.png' alt='default thumb' class='thumb'>"+
+							"<h3>"+product.name+"</h3>"+
+							"<span class='meta'>"+product.product_id+"</span>"+
+							"<br class='description'><span class='description'>"+product.description+"</span>"+
+						"</section>"+
+						
+						"<section class='right'>"+
+							"<span class='price'>"+product.price+"€</span>"+
+							"<span class='darkview'>"+
+							"<a href='javascript:void(0);' class='editBtn'><img src='images/add-to-edit-btn.png' alt='Edit'></a>"+
+							"<a href='javascript:void(0);' class='xBtn'><img src='images/read-delete-btn.png' alt='Delete'></a>"+
+							"<a class='gridColumn' ></a>"+
+							"</span>"+
+						"</section>"+
+					"</li>"
+							);								
+						});
+				});
+				});
+	</script>
+		</ul>
 
-    <button id="fetchContacts" class="btn btn-default" type="submit">Button</button>
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript">
-
-        $("#fetchContacts").bind("click", function() {
-
-            $.get("http://localhost:8080/products", function(data) {
-
-                $.each(data, function(i, product) {
-
-                    $(".data-contacts-js").append(
-                        "<tr><td>" + product.name + "</td>" +
-                        "<td>" + product.tax + "</td>" +
-                        "<td>" + product.price + "</td></tr>");
-                });
-
-            });
-        });
-    </script>
+		<footer> &nbsp; </footer>
+	</div>
 </body>
 </html>
