--- a/src/main/resources/static/listingProductsStyle.css
+++ b/src/main/resources/static/listingProductsStyle.css
@@ -58,12 +58,28 @@ ul.list li.alt { background: #d7dfe0; }
 .gridColumn{margin-left: 15px;grid-row: 1;grid-column: 1;overflow: hidden;height: 115px;}
 
 a.editBtn{
+    display: inherit;
+    flex-flow: column;
+    margin-left: 10px;
+    margin-right: 10px;
+    grid-column: 2;
+}
+
+a.editbtngridview{
     display: flex;
     flex-flow: column;
     margin-left: 10px;
     margin-right: 10px;
     grid-column: 2;
 }
+
+#product_name{    
+	white-space: nowrap;
+    text-overflow: ellipsis;
+    /* width: 100px; */
+    overflow: hidden;
+    }
+    
 .description{color: #93989b;font-weight: normal;font-size: 1.1em;}
 
 ul.list li section.left {display: block;float: left;width: 350px;position: relative;padding-left: 20px;}
@@ -73,10 +89,17 @@ ul.list li section.left img.thumb { float: left; margin-right: 10px; }
 ul.list li section.left img.featured-banner { position: absolute; left: -18px; top: 35px; }
 
 ul.list li section.left h3 { font-family: "Trebuchet MS", Arial, sans-serif; font-weight: bold; text-transform: uppercase; color: #707375; font-size: 1.4em; line-height: 1.6em; } 
-ul.list li section.left span.meta {color: #93989b;font-weight: normal;font-size: 1.1em;}
+ul.list li section.left span.meta {color: #fbfbfb;font-weight: normal;font-size: 1.1em;}
 
 
-ul.list li section.right span.price { font-weight: bold; display: block; margin-bottom: 15px; color: #ad3939; font-size: 1.6em; text-align: right; }
+ul.list li section.right span.price {
+    font-weight: bold;
+    display: block;
+    margin-top: 10px;
+    color: #ad3939;
+    font-size: 1.6em;
+    text-align: right;
+    margin-right: 10px; }
 
 ul.list li section.right a.firstbtn { margin-right: 7px; }
 
