--- a/src/main/resources/templates/product-listing.html
+++ b/src/main/resources/templates/product-listing.html
@@ -23,12 +23,42 @@
 
 		</header>
 
-		<ul id="products" class="list clearfix">
-          <script type="text/javascript" src="listingProducts.js"> 
+		<ul id="products" class="clearfix">
 			<script	src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 			<script type="text/javascript">
-		$(document).ready(
-				  function() {
+			function showGrid() {
+				$.get("http://localhost:8080/ajaxproducts", function(data) {
+					$.each(data, function(i, product) {
+						$("#products").append(
+					
+		"<li class='clearfix'><section class='left'>"+
+				    "<img alt='default thumb' class='thumb' src='images/products/grid-default-thumb.png'>"+
+ 			        "<h3 id='product_name' class='alwaysOnTop'>"+product.name+"</h3>"+
+     			    "<span class='meta alwaysOnTop'>"+product.product_id+"</span>"+
+			        "</img>"+
+				   "</section>"+
+
+				  "<section class='right'>"+
+					"<a class='price'>"+
+			    "<span class='alwaysOnTopPrice'>"+product.price+"€"+"</span>"+
+			    "</a>"+
+			    "<span class='darkview gridviewCl'>"+
+ 		      	  "<a class='editbtngridview' href='javascript:void(0);'>"+
+        	   			"<img class='grow' alt='Delete' src='images/read-delete-btn.png'/>"+
+         	    		"<img class ='grow darkenimg' alt='Edit' src='images/add-to-edit-btn.png'/>"+
+     		 	   "</a>"+
+     		 	   "<a class='gridColumn'>"+
+        	   			 "<span class='description'>"+product.description+"</span>"+
+     			    "</a>"+
+   			    "</span>"+
+			 "</section>"+
+		"</li>"		
+						);								
+					});
+			});
+		};
+		
+				  function showlist() {
 					$.get("http://localhost:8080/ajaxproducts", function(data) {
 					
 						$.each(data, function(i, product) {
@@ -43,18 +73,38 @@
 						"</section>"+
 						
 						"<section class='right'>"+
-							"<span class='price'>"+product.price+"€</span>"+
 							"<span class='darkview'>"+
-							"<a href='javascript:void(0);' class='editBtn'><img src='images/add-to-edit-btn.png' alt='Edit'></a>"+
-							"<a href='javascript:void(0);' class='xBtn'><img src='images/read-delete-btn.png' alt='Delete'></a>"+
-							"<a class='gridColumn' ></a>"+
+							"<a href='javascript:void(0);' class='editBtn'><img class ='grow darkenimg' src='images/add-to-edit-btn.png' alt='Edit'></a>"+
+							"<a href='javascript:void(0);' class='xBtn'><img class='grow' src='images/read-delete-btn.png' alt='Delete'></a>"+
+							"<span class='price'>"+product.price+"€</span>"+
 							"</span>"+
 						"</section>"+
 					"</li>"
 							);								
 						});
 				});
-				});
+				  };
+					
+		$(document).ready(function() {
+			  $( "#products" ).empty();
+			  showlist();
+			  $( "#products" ).removeClass( "grid" );
+			  $( "#products" ).addClass( "list" );
+			
+			  $('#listview').click(function clicklist(){
+				  $( "#products" ).empty();
+				  showlist();
+				  $( "#products" ).removeClass( "grid" );
+				  $( "#products" ).addClass( "list" );
+			 		 });
+			  $('#gridview').click(function clickgrid(){
+				  $( "#products" ).empty();
+				  showGrid();
+				  $( "#products" ).removeClass( "list" );
+				  $( "#products" ).addClass( "grid" );
+		 		 });
+			  
+		});
 	</script>
 		</ul>
 
