--- a/src/main/resources/templates/product-listing.html
+++ b/src/main/resources/templates/product-listing.html
@@ -7,24 +7,28 @@
 <link rel="shortcut icon" href="http://vandelaydesign.com/favicon.ico">
 <link rel="icon" href="http://vandelaydesign.com/favicon.ico">
 <link rel="stylesheet" type="text/css" href="listingProductsStyle.css">
-<script type="text/javascript"
-	src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript"	src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<link rel="stylesheet" type="text/css" href="bootstrap.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 	<div id="wrap">
 		<header>
-			<span class="list-style-buttons"> <a href="#" id="gridview"
-				class="switcher"><img src="images/grid-view.png" alt="Grid"></a>
-				<a href="#" id="listview" class="switcher active"><img
-					src="images/list-view-active.png" alt="List"></a>
+			<span class="list-style-buttons"> 
+				<a href="#" id="gridview" class="switcher">
+					<img src="images/grid-view.png" alt="Grid">	
+				</a>
+				<a href="#" id="listview" class="switcher active">
+			  		<img src="images/list-view-active.png" alt="List">
+			  	</a>
 			</span>
 			<h1>Our Products</h1>
 
 		</header>
 
 		<ul id="products" class="clearfix">
-			<script	src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 			<script type="text/javascript">
 			function showGrid() {
 				$.get("http://localhost:8080/ajaxproducts", function(data) {
@@ -44,8 +48,8 @@
 			    "</a>"+
 			    "<span class='darkview gridviewCl'>"+
  		      	  "<a class='editbtngridview' href='javascript:void(0);'>"+
-        	   			"<img class='grow' alt='Delete' src='images/read-delete-btn.png'/>"+
-         	    		"<img class ='grow darkenimg' alt='Edit' src='images/add-to-edit-btn.png'/>"+
+        	   			"<img type='button' data-toggle='modal' class='grow' alt='Delete' src='images/read-delete-btn.png'/>"+
+         	    		"<img type='button' data-toggle='modal' data-target='#myModal' class ='grow darkenimg' alt='Edit' src='images/add-to-edit-btn.png'/>"+
      		 	   "</a>"+
      		 	   "<a class='gridColumn'>"+
         	   			 "<span class='description'>"+product.description+"</span>"+
@@ -74,7 +78,7 @@
 						
 						"<section class='right'>"+
 							"<span class='darkview'>"+
-							"<a href='javascript:void(0);' class='editBtn'><img class ='grow darkenimg' src='images/add-to-edit-btn.png' alt='Edit'></a>"+
+							"<a data-toggle='modal' data-target='#myModal' class='editBtn'><img class ='grow' src='images/add-to-edit-btn.png' alt='Edit'></a>"+
 							"<a href='javascript:void(0);' class='xBtn'><img class='grow' src='images/read-delete-btn.png' alt='Delete'></a>"+
 							"<span class='price'>"+product.price+"€</span>"+
 							"</span>"+
@@ -106,7 +110,48 @@
 			  
 		});
 	</script>
+<script type="text/javascript">
+$(document).ready(function(){
+	$("#myModal").on('show.bs.modal', function(event){
+        var button = $(event.relatedTarget);  // Button that triggered the modal
+        var titleData = button.data('title'); // Extract value from data-* attributes
+        $(this).find('.modal-title').text(titleData + ' Form');
+    });
+});
+</script>
 		</ul>
+
+
+<div class="bs-example">
+    
+    <!-- Modal HTML -->
+    <div id="myModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Modal Window</h4>
+                </div>
+                <div class="modal-body">
+                    <form role="form">
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">Email:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">Message:</label>
+                            <textarea class="form-control" id="message-text"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary">Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>     
 
 		<footer> &nbsp; </footer>
 	</div>
