--- a/src/main/resources/templates/product-listing.html
+++ b/src/main/resources/templates/product-listing.html
@@ -68,18 +68,19 @@
 						$.each(data, function(i, product) {
 							$("#products").append(
 									
-					"<li class='clearfix'>"+
+					"<li id="+product.id+" class='clearfix'>"+
 						"<section class='left'>"+
 							"<img src='images/products/list-default-thumb.png' alt='default thumb' class='thumb'>"+
-							"<h3>"+product.name+"</h3>"+
+							"<h3 >"+product.name+"</h3>"+
 							"<span class='meta'>"+product.product_id+"</span>"+
 							"<br class='description'><span class='description'>"+product.description+"</span>"+
 						"</section>"+
 						
 						"<section class='right'>"+
 							"<span class='darkview'>"+
-							"<a data-toggle='modal' data-target='#myModal' class='editBtn'><img class ='grow' src='images/add-to-edit-btn.png' alt='Edit'></a>"+
-							"<a href='javascript:void(0);' class='xBtn'><img class='grow' src='images/read-delete-btn.png' alt='Delete'></a>"+
+							"<a data-toggle='modal' data-target='#myModal' class='editBtn'>"+
+							"<img class ='grow' src='images/add-to-edit-btn.png' alt='Edit'></a>"+
+							"<a  class='xBtn'><img class='grow' src='images/read-delete-btn.png' alt='Delete'></a>"+
 							"<span class='price'>"+product.price+"€</span>"+
 							"</span>"+
 						"</section>"+
@@ -107,18 +108,28 @@
 				  $( "#products" ).removeClass( "list" );
 				  $( "#products" ).addClass( "grid" );
 		 		 });
-			  
+			  $('a.editBtn').click(function() {
+			        var val = $(this).val();
+			        $('#input_' + val).val(val);
+				  });
 		});
+		
+		 $("#savebtn").click(function () {
+		        $.ajax({
+		            type: "POST",
+		            url: "http://localhost:8080/saveproduct",
+		            data: "{name: '" + $("#txtName").val() + "'}",
+		            contentType: "application/json; charset=utf-8",
+		            dataType: "json",
+		            success: function (r) {
+		                $("#dialog").html(r.d);
+		                $("#dialog").dialog("open");
+		            }
+		        });
+		    });
+		 
 	</script>
-<script type="text/javascript">
-$(document).ready(function(){
-	$("#myModal").on('show.bs.modal', function(event){
-        var button = $(event.relatedTarget);  // Button that triggered the modal
-        var titleData = button.data('title'); // Extract value from data-* attributes
-        $(this).find('.modal-title').text(titleData + ' Form');
-    });
-});
-</script>
+
 		</ul>
 
 
@@ -135,18 +146,30 @@ $(document).ready(function(){
                 <div class="modal-body">
                     <form role="form">
                         <div class="form-group">
-                            <label for="recipient-name" class="control-label">Email:</label>
-                            <input type="text" class="form-control" id="recipient-name">
+                            <label for="recipient-name" class="control-label">Product name:</label>
+                            <input type="text" class="form-control" id="product-name">
                         </div>
                         <div class="form-group">
-                            <label for="message-text" class="control-label">Message:</label>
-                            <textarea class="form-control" id="message-text"></textarea>
+                            <label for="recipient-name" class="control-label">Product id:</label>
+                            <input type="text" class="form-control" id="product-id">
+                        </div>
+                        <div class="form-group" id='pricediv'>
+                            <label for="recipient-name" class="control-label">Price:</label>
+                            <input type="number" class="form-control" id="price">
+                        </div>
+                        <div class="form-group" id='taxdiv'>
+                            <label for="recipient-name" class="control-label">Tax:</label>
+                            <input type="number" class="form-control" id="tax">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">Description:</label>
+                            <textarea class="form-control" id="description-text"></textarea>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Send</button>
+                    <button id='savebtn' type="button" class="btn btn-primary">Save</button>
                 </div>
             </div>
         </div>
