--- a/src/main/resources/static/bootstrap.css
+++ b/src/main/resources/static/bootstrap.css
@@ -4582,7 +4582,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination {
   display: inline-block;
   padding-left: 0;
-  margin: 20px 0;
+  margin: 10px;
   border-radius: 4px;
 }
 .pagination > li {
@@ -4595,28 +4595,26 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+ 
   text-decoration: none;
-  background-color: #fff;
+
   border: 1px solid #ddd;
 }
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
   margin-left: 0;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+
 }
 .pagination > li:last-child > a,
 .pagination > li:last-child > span {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+
 }
 .pagination > li > a:hover,
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #23527c;
+
   background-color: #eee;
   border-color: #ddd;
 }
@@ -4629,8 +4627,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 3;
   color: #fff;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #bad725;
+  border-color: #fff;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
