--- a/src/main/resources/static/listingProductsStyle.css
+++ b/src/main/resources/static/listingProductsStyle.css
@@ -97,6 +97,68 @@ a.editbtngridview{
     /* width: 100px; */
     overflow: hidden;
     }
+  
+ .button_previous_next{
+border:1px solid #4B546A;-webkit-box-shadow: #B4B5B5 2px 2px 2px  ;-moz-box-shadow: #B4B5B5 2px 2px 2px ; box-shadow: #B4B5B5 2px 2px 2px  ; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-family:arial, helvetica, sans-serif; 
+padding: 6px 6px 6px 6px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #f1ebeb;
+ background-color: #7d7e7d; background-image: -webkit-gradient(linear, left top, left bottom, from(#7d7e7d), to(#0e0e0e));
+ background-image: -webkit-linear-gradient(top, #7d7e7d, #0e0e0e);
+ background-image: -moz-linear-gradient(top, #7d7e7d, #0e0e0e);
+ background-image: -ms-linear-gradient(top, #7d7e7d, #0e0e0e);
+ background-image: -o-linear-gradient(top, #7d7e7d, #0e0e0e);
+ background-image: linear-gradient(to bottom, #7d7e7d, #0e0e0e);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#7d7e7d, endColorstr=#0e0e0e);
+}
+
+.button_previous_next:hover{
+ border:1px solid #4a4b4a;
+ background-color: #646464; background-image: -webkit-gradient(linear, left top, left bottom, from(#646464), to(#282828));
+ background-image: -webkit-linear-gradient(top, #646464, #282828);
+ background-image: -moz-linear-gradient(top, #646464, #282828);
+ background-image: -ms-linear-gradient(top, #646464, #282828);
+ background-image: -o-linear-gradient(top, #646464, #282828);
+ background-image: linear-gradient(to bottom, #646464, #282828);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#646464, endColorstr=#282828);
+} 
+.button_first{
+border:1px solid #4B546A;-webkit-box-shadow: #B4B5B5 2px 2px 2px  ;-moz-box-shadow: #B4B5B5 2px 2px 2px ; box-shadow: #B4B5B5 2px 2px 2px  ;-webkit-border-radius: 20px 5px 5px 20px;
+-moz-border-radius: 20px 5px 5px 20px;border-radius: 20px 5px 5px 20px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;
+text-shadow: 1px 1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
+ background-color: #B6E026; background-image: -webkit-gradient(linear, left top, left bottom, from(#B6E026), to(#d4994e));
+ background-image: -webkit-linear-gradient(top, #B6E026, #d4994e);
+ background-image: -moz-linear-gradient(top, #B6E026, #d4994e);
+ background-image: -ms-linear-gradient(top, #B6E026, #d4994e);
+ background-image: -o-linear-gradient(top, #B6E026, #d4994e);
+ background-image: linear-gradient(to bottom, #B6E026, #d4994e);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#B6E026, endColorstr=#d4994e);
+}
+
+.button_first:hover{
+ border:1px solid #718c14;
+ background-color: #95b91a; background-image: -webkit-gradient(linear, left top, left bottom, from(#95b91a), to(#c0802f));
+ background-image: -webkit-linear-gradient(top, #95b91a, #c0802f);
+ background-image: -moz-linear-gradient(top, #95b91a, #c0802f);
+ background-image: -ms-linear-gradient(top, #95b91a, #c0802f);
+ background-image: -o-linear-gradient(top, #95b91a, #c0802f);
+ background-image: linear-gradient(to bottom, #95b91a, #c0802f);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#95b91a, endColorstr=#c0802f);
+}
+  
+.button_last{
+border:1px solid #4B546A;-webkit-box-shadow: #B4B5B5 2px 2px 2px  ;-moz-box-shadow: #B4B5B5 2px 2px 2px ; box-shadow: #B4B5B5 2px 2px 2px  ;-webkit-border-radius: 5px 20px 20px 5px;-moz-border-radius: 5px 20px 20px 5px;border-radius: 5px 20px 20px 5px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: 1px 1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
+ background-color: #B6E026; background-image: -webkit-gradient(linear, left top, left bottom, from(#B6E026), to(#d4994e));
+ background-image: -webkit-linear-gradient(top, #B6E026, #d4994e);
+ background-image: -moz-linear-gradient(top, #B6E026, #d4994e);
+ background-image: -ms-linear-gradient(top, #B6E026, #d4994e);
+ background-image: -o-linear-gradient(top, #B6E026, #d4994e);
+ background-image: linear-gradient(to bottom, #B6E026, #d4994e);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#B6E026, endColorstr=#d4994e);
+}
+
+.button_last:hover{
+ border:1px solid #718c14;
+ background-color: #95b91a; background-image: -webkit-gradient(linear, left top, left bottom, from(#95b91a), to(#c0802f));
+ background-image: -webkit-linear-gradient(top, #95b91a, #c0802f);
+ background-image: -moz-linear-gradient(top, #95b91a, #c0802f);
+ background-image: -ms-linear-gradient(top, #95b91a, #c0802f);
+ background-image: -o-linear-gradient(top, #95b91a, #c0802f);
+ background-image: linear-gradient(to bottom, #95b91a, #c0802f);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#95b91a, endColorstr=#c0802f);
+}
     
 .description{color: #93989b;font-weight: normal;font-size: 1.1em;}
 
