--- a/src/main/resources/templates/product-listing.html
+++ b/src/main/resources/templates/product-listing.html
@@ -20,9 +20,10 @@
 	<div id="wrap">
 		<header>
 			<span class="list-style-buttons">
-			 <a  id="gridview"	class="switcher" data-bind="click: function(){ $data.changeGridView(); }"> 
+			 <a href="#" id="gridview"	class="switcher" data-bind="click: function(){ $data.changeGridView(); }"> 
 			 		<img src="images/grid-view.png" alt="Grid">
-			</a> <a  id="listview" class="switcher active" data-bind="click: function(){ $data.changeListView(); }"> 
+			</a> 
+			<a href="#" id="listview" class="switcher active" data-bind="click: function(){ $data.changeListView(); }"> 
 		 			<img src="images/list-view-active.png" alt="List">
 			</a>
 			</span>
@@ -64,7 +65,7 @@
 				 	   <span class='alwaysOnTopPrice' data-bind="text: $data.priceText"></span>
 				    </a>
 				    <span class='darkview gridviewCl'>
-	 		      	  <a class='editbtngridview' href='javascript:void(0);'>
+	 		      	  <a class='editbtngridview' href="#">
         	   			<img type='button' data-toggle='modal' class='grow' alt='Delete' src='images/read-delete-btn.png'/>
          	    		<img type='button' data-toggle='modal' data-target='#myModal' class ='grow darkenimg' alt='Edit' src='images/add-to-edit-btn.png'/>
      		 		   </a>
@@ -76,16 +77,18 @@
 			</li>
 		</li>		
 		</ul>
+		<!-- paging HTML elements -->
+		<div>
 		<ul class="pagination">
 
       <li data-bind="css: { disabled: $data.products.isFirstPage() }" class="previous disabled">
-        <a href="#" aria-label="First" data-bind="click: products.toFirstPage">
+        <a href="#" class="button_first" aria-label="First" data-bind="click: products.toFirstPage">
           First
         </a>
       </li>
 
       <li data-bind="css: { disabled: !$data.products.hasPreviousPage() }" class="previous disabled">
-        <a href="#" aria-label="Previous" data-bind="click: products.toPreviousPage">
+        <a href="#" class="button_previous_next" aria-label="Previous" data-bind="click: products.toPreviousPage">
           Previous
         </a>
       </li>
@@ -97,18 +100,18 @@
       <!-- /ko -->
 
       <li data-bind="css: { disabled: ! $data.products.hasNextPage() }" class="next disabled">
-        <a href="#" aria-label="Next" data-bind="click: products.toNextPage">
+        <a href="#"  class="button_previous_next" aria-label="Next" data-bind="click: products.toNextPage">
           Next
         </a>
       </li>
 
       <li data-bind="css: { disabled: products.isLastPage() }" class="next disabled">
-        <a href="#" aria-label="Last" data-bind="click: products.toLastPage">
+        <a href="#" class="button_last" aria-label="Last" data-bind="click: products.toLastPage">
           Last
         </a>
       </li>
  	 </ul>
-
+	</div>
 
 		<div class="bs-example">
 
