--- a/src/main/resources/templates/product-listing.html
+++ b/src/main/resources/templates/product-listing.html
@@ -30,7 +30,10 @@
 			</a>
 			</span>
 			<h1>Our Products</h1>
-
+			<span class="pageamount" data-bind="click: setPageSize(15); ">15</span>
+			<span class="pageamount" data-bind="click: setPageSize(30); ">30</span>
+			<span class="pageamount" data-bind="click: setPageSize(90); ">90</span>
+			<span class="pageamount" data-bind="click: setPageSize(180),init; ">180</span>
 		</header>
 		
 
