--- a/src/main/resources/templates/product-listing.html
+++ b/src/main/resources/templates/product-listing.html
@@ -30,15 +30,17 @@
 			</a>
 			</span>
 			<h1>Our Products</h1>
-			<span class="pageamount" data-bind="click: setPageSize(15); ">15</span>
-			<span class="pageamount" data-bind="click: setPageSize(30); ">30</span>
-			<span class="pageamount" data-bind="click: setPageSize(90); ">90</span>
-			<span class="pageamount" data-bind="click: setPageSize(180),init; ">180</span>
+			<div class="pagingamounticons">
+			<span class="pageamount" data-bind="click: function(){ setPageSize(15); }  ">15</span>
+			<span class="pageamount" data-bind="click: function(){ setPageSize(30); }  ">30</span>
+			<span class="pageamount" data-bind="click: function(){ setPageSize(90); }  ">90</span>
+			<span class="pageamount" data-bind="click: function(){ setPageSize(180); } ">180</span>
+			</div>
 		</header>
 		
 
 		<ul data-bind="foreach: $data.products.pageItems" id="products" class="clearfix list">
-			<li class='clearfix' data-bind="visible: $parent.listView">
+			<li class='listproductli clearfix' data-bind="visible: $parent.listView">
 				<section class='left'>
 					<img src='images/products/list-default-thumb.png'
 						alt='default thumb' class='thumb'>
@@ -49,16 +51,15 @@
 				</section>
 
 				<section class='right'>
-					<span class='darkview'> <a data-toggle='modal'
-						data-target='#myModal' class='editBtn' data-bind="click: function(){ $parent.editItem($data); }"> <img class='grow'
-							src='images/add-to-edit-btn.png' alt='Edit'></a> <a
-						class='xBtn'><img class='grow'
-							src='images/read-delete-btn.png' alt='Delete'></a> <span
-						class='price' data-bind="text: $data.priceText"></span>
+					<span class='darkview'> <a href="#" data-toggle='modal'	data-target='#myModal' class='editBtn' data-bind="click: function(){ $parent.editItem($data); }"> 
+					<img href="#" class='grow' src='images/add-to-edit-btn.png' alt='Edit'></a> 
+						<a href="#" class='xBtn'><img class='grow' src='images/read-delete-btn.png' alt='Delete'>
+						</a> <span	class='price' data-bind="text: $data.priceText"></span>
 					</span>
 				</section>
+			</li>		
 			
-			<li class='clearfix' data-bind="visible: !$parent.listView()">
+			<li class='gridproductli clearfix' data-bind="visible: !$parent.listView()">
 			 <section class='left'>
 				    <img alt='default thumb' class='thumb' src='images/products/grid-default-thumb.png'>
  			        <h3  data-bind="text: $data.name" class='product_name alwaysOnTop'></h3>
@@ -81,7 +82,6 @@
    			 	   </span>
 			 </section>
 			</li>
-		</li>		
 		</ul>
 		<!-- paging HTML elements -->
 		<div class="pageindexblock">
@@ -134,9 +134,13 @@
 						<div class="modal-body">
 							<form role="form">
 								<div class="form-group">
-									<label for="recipient-name" class="control-label">Product
-										name:</label> <input type="text" class="form-control"
-										id="product-name" data-bind="textInput: $data.name">
+									<label for="recipient-name" class="control-label">Product name:</label> 
+									<input type="text" class="form-control"	id="product-name" data-bind="textInput: $data.name">
+								</div>
+								<div class="form-group">
+									<span >
+  									  <input class="fileinput btn btn-primary"  type="file">
+									</span>
 								</div>
 								<div class="form-group">
 									<label for="recipient-name" class="control-label">Product id:</label> 
