--- a/src/main/resources/static/listingProductsStyle.css
+++ b/src/main/resources/static/listingProductsStyle.css
@@ -99,6 +99,7 @@ ul.list li.alt { background: #d7dfe0; }
 .imginput img{
     padding: 10px;
     width: 190px;
+    height: 190px;
 }
 
 .divinlineblock{
